--- a/.jshintrc
+++ b/.jshintrc
@@ -8,6 +8,7 @@
     "freeze": true,
     "immed": true,
     "indent": 4,
+    "esversion": 6,
     "latedef": true,
     "newcap": true,
     "noarg": true,
@@ -47,7 +48,7 @@
 
     "onevar": true,
 
-    "globals": { 
+    "globals": {
         "module": true,
         "process": true,
         "console": true,
