--- a/package.json
+++ b/package.json
@@ -1,19 +1,51 @@
 {
-  "name": "prettytable",
-  "version": "0.3.1",
-  "main": "prettytable.js",
-  "types": "prettytable.d.ts",
-  "description": "CLI based Node module for generating pretty tables from multiple data sources",
+  "name": "prettytable.js",
+  "version": "1.0.0",
+  "main": "out/index.js",
+  "types": "out/index.d.ts",
+  "description": "Browser/Node module for generating pretty tables from multiple data sources",
+  "repository": "https://github.com/mrrefactoring/prettytable.js",
+  "author": "Vladislav Tupikin <mrrefactoring@yandex.ru>",
+  "license": "MIT",
+  "scripts": {
+    "prepublishOnly": "npm run build && npm run lint && npm run test:unit",
+    "build": "tsc",
+    "test:unit": "ava tests/unit",
+    "test:unit:coverage": "c8 ava tests/unit",
+    "lint": "eslint ./src --ext .ts",
+    "lint:fix": "npm run lint -- --fix"
+  },
   "keywords": [
+    "pretty",
+    "prettytable",
     "table",
-    "cli table",
     "csv",
     "json"
   ],
-  "repository": "https://github.com/jyotiska/prettytable",
-  "author": "Jyotiska NK <jyotiska123@gmail.com>",
-  "license": "MIT",
+  "ava": {
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "ava": "^4.3.1",
+    "c8": "^7.11.3",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.2.7",
+    "eslint-plugin-import": "^2.26.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  },
   "dependencies": {
-    "csv-parse": "^5.2.2"
+    "csv-parse": "^5.3.0",
+    "csv-stringify": "^6.2.0"
   }
 }
